Overflow fix

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body, html {
   overflow: hidden;
+  position: fixed;
 }
 
 body {
